--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
 		<artifactId>hibernate-core</artifactId>
 		<version>5.4.13.Final</version>
 	</dependency>
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-java8</artifactId>
+		<version>5.4.13.Final</version>
+	</dependency>
   </dependencies>
 </project>
